text spacing in header fixed

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ header{
   display: flex;
   flex-direction: column;
   width: 100vw;
-  height: 15%;
+  height: 20%;
   font-size: 12px;
 }
 
@@ -25,5 +25,5 @@ header{
 
 .list-inline  li, .list-inline {
   display: inline;
-  margin-left: 5px
+  margin-left: 7px
 }
